[package]
name = "p2p-proxy"
version = "2025.3.4"
edition = "2021"
description = "p2p client"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["p2p", "client"]
repository = "https://github.com/ascpkg/p2p-proxy/tree/main/p2p-client"


[dependencies]
aes-gcm = { version = "0.10.3" }
anyhow = { version = "1.0.96" }
base64 = { version = "0.22.1" }
bytes = { version = "1.10.0" }
clap = { version = "4.5.30", features = ["derive"] }
config_file_derives = { version = "2025.1.6" }
config_file_types = { version = "2025.1.6", features = ["json"] }
getrandom  = { version = "0.3.0" }
hostname = { version = "0.4.0" }
regex = { version = "1.11.1" }
sha1 = { version = "0.10.6" }
serde = { version = "1.0.218" }
serde_json = { version = "1.0.139" }
tokio = { version = "1.43.0" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time", "json"] }
ureq = { version = "2.11.0" }
urlencoding = "2.1.3"
uuid = { version = "1.14.0", features = ["v4"] }
webrtc-ice = { version = "0.12.0" }
