[package]
name = "webrtc-p2p-client"
version = "2025.2.28"
edition = "2021"
description = "WebRtc p2p client"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["webrtc", "p2p", "client"]
repository = "https://github.com/ascpkg/p2p-proxy/tree/main/webrtc-p2p-client"


[dependencies]
anyhow = { version = "1.0.96" }
base64 = { version = "0.22.1" }
bytes = { version = "1.10.0" }
clap = { version = "4.5.30", features = ["derive"] }
config_file_derives = { version = "2025.1.6" }
config_file_types = { version = "2025.1.6", features = ["json"] }
hostname = { version = "0.4.0" }
regex = { version = "1.11.1" }
serde = { version = "1.0.218" }
serde_json = { version = "1.0.139" }
tokio = { version = "1.43.0" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time", "json"] }
ureq = { version = "2.11.0" }
urlencoding = "2.1.3"
uuid = { version = "1.14.0", features = ["v4"] }
webrtc = { version = "0.12.0" }
